--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,7 +6,9 @@
   "extends": "eslint:recommended",
   "globals": {
     "Atomics": "readonly",
-    "SharedArrayBuffer": "readonly"
+    "SharedArrayBuffer": "readonly",
+    "describe": true,
+    "it": true
   },
   "parserOptions": {
     "ecmaVersion": 11,
