--- a/package.json
+++ b/package.json
@@ -5,14 +5,16 @@
   "description": "Don't spend your entire life building a ship, without ever tasting the salt of the ocean.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "eslint .",
-    "lint:fix": "eslint . --fix"
+    "lint:fix": "eslint . --fix",
+    "test": "./node_modules/.bin/mocha src/**/*.spec.js"
   },
   "author": "Francesco Napoletano",
   "license": "ISC",
   "devDependencies": {
-    "eslint": "^7.10.0"
+    "chai": "^4.2.0",
+    "eslint": "^7.10.0",
+    "mocha": "^8.1.3"
   },
   "dependencies": {
     "inquirer": "^7.3.3"
